# proiect-beta-ready

./: .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 211146e48bde_add_vehicle_photos.py  3c1f4d2b8e91_add_email_verification_fields_to_registration_requests.py  4e76035d818a_extend_document_type_enum.py  5b7737d621f3_clean_init.py  6f1bda129984_clean_init.py  70f3f24786a6_add_password_reset_fields_to_users.py  942cc1992a78_add_registration_requests_table.py  d5c49f6c692b_add_shift_number_to_vehicle_assignments.py  eff32d6f3715_fix_assignment_rejected_constraint.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/core/: config.py  constants.py  db_error_map.py  exceptions.py  i18n.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  document.py  user.py  (+9 more)
backend/app/middleware/: request_logging.py
backend/app/schemas/: admin_dashboard.py  auth.py  base.py  document.py  employee_profile.py  handover.py  leave_request.py  my_vehicle.py  profile_summary.py  registration_request.py  user.py  vehicle.py  vehicle_assignment_admin.py  vehicle_history.py  vehicle_issue.py  vehicle_live_status.py  vehicle_session.py
backend/app/services/: email_service.py  employee_profile_service.py  profile_summary_service.py  vehicle_assignment_service.py  vehicle_issue_service.py
backend/scripts/: create_admin.py  create_test_users.py
(+251 files in other folders)
